--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,17 +1,32 @@
+
+
+
+
+/* JUMBOTRON AREA ////////////////////////////////////////////////////////// */
 .jumbotron {
-  color: rgba(255, 255, 255, 1);
+  color: #fff;
+  background-color: none;
 }
 
-.header-bg-img {
-  background: url('../assets/office.jpeg') no-repeat;
-}
-
-.header-transparent-layer {
-  background: rgba(87, 27, 179, 0.6);
+.transparent-layer {
+  background-color: rgba(87, 27, 179, 0.6);
   /*background-color: #5b1bb5;
   opacity: 0.6;
   filter: alpha(opacity=60); /* For IE8 and earlier */
 }
+
+
+.header-bg-img {
+  background-image: url('../assets/office.jpeg');
+    /*background-image: url('http://www.pets4homes.co.uk/images/articles/1111/large/feline-influenza-all-about-cat-flu-5239fffd61ddf.jpg');*/
+    background-size: contain;
+    background-repeat: no-repeat;
+    /*width: 100%;*/
+    height: 0;
+    /*padding-top: 66.64%;*/ /* (img-height / img-width * container-width) */
+                /* (853 / 1280 * 100) */
+}
+
 
 
 .sub-head-area {
