--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -116,9 +116,15 @@ h1, h2, h3, h4, h5 {
   width: 100%;
 }
 
+.jumbotron .container p {
+  font-weight: 400;
+}
+
 .jumbotron .btn-primary {
   background-color: bg-dark-purple;
   border-color: bg-dark-purple;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* SUBHEAD /////////////////////////////////////////////////////// */
